# image-processing-api

./: README.md  api_processamento_de_imagens.ipynb  image_processing_api.ipynb  pyproject.toml
src/: Dockerfile  INSTRUÇÕES.md  app.py  image_deskewer.py  trust-policy.json
streamlit/: frontend.py
