[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Carlos Melo <carlos.fab@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.3"
numpy = "^1.26.1"
requests = "^2.31.0"
pillow = "^10.2.0"
opencv-python-headless = "^4.9.0.80"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
