[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Carlos Melo <carlos@sigmoidal.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
tensorflow = "^2.15.0"
sagemaker = {extras = ["local"], version = "^2.197.0"}
scikit-learn = "^1.3.2"
black = "^23.11.0"
flake8 = "^6.1.0"
ipykernel = "^6.26.0"
pandas = "^2.1.3"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
python-dotenv = "^1.0.0"
ipytest = "^0.13.3"
seaborn = "^0.13.0"
nbqa = "^1.7.1"
isort = "^5.12.0"
pydocstyle = "^6.3.0"
taskipy = "^1.12.2"
opencv-python-headless = "^4.9.0.80"
streamlit = "^1.31.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_third_party = []

[tool.taskipy.tasks]
format = "isort . && black ."